--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^7.0.2",
     "react-select": "^5.8.1",
     "tailwind-merge": "^2.5.5"
   },
